--- a/src/themes/dark-theme.less
+++ b/src/themes/dark-theme.less
@@ -18,3 +18,6 @@
 
 // //my
 // @layout-header-background:@disabled-color;
+
+@card-shadow: 0 1px 2px -2px rgba(255, 255, 255, 0.48), 0 3px 6px 0 rgba(255, 255, 255, 0.36),
+  0 5px 12px 4px rgba(255, 255, 255, 0.27);
